--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function MM_swapImage() { //v3.0
  					<br>
  				</div>
  				<div>
- 					<img src="imagenes/ross.jpg" "width="50%" height="50%">
+ 					<img src="imagenes/ross.jpg" "width="40%" height="40%">
  				</div>
  			</div>
  		</div>
@@ -91,7 +91,7 @@ function MM_swapImage() { //v3.0
         </li>
         </ul>
        </div>
-       <p>Podras encontrar más información del Dá mundial de la Bicicleta en:<a href="http://cdmx.gob.mx/vive-cdmx/post/especial-dia-mundial-de-la-bicicleta-2017">Click</a></p>
+       <a href="http://cdmx.gob.mx/vive-cdmx/post/especial-dia-mundial-de-la-bicicleta-2017" target="_self">Para más información sobre el Día Mundial de la Bicicleta. </a>
 
        <div data-role="footer" align="center" data-theme="a" data-position="fixed">
        <div>
@@ -141,7 +141,8 @@ Cuidados
 
 Si ya decidiste usar tu bicicleta para tus desplazamientos diarios, debes tomar algunas precauciones para que tus viajes sean seguros.
 </h2></div>
-           <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/vene.jpg',1)"><img src="imagenes/ambiente.png" width="401" height="244" id="Image16"></a> </div>
+           <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagenes/vene.jpg',1)"><img src="imagenes/ambiente.png" width="401" height="244" id="Image16"></a>
+          </div>
           <div data-role="footer" align="center" data-theme="a" data-position="fixed">
           <div>
             <img src="imagenes/bici.png" width="46" height="46">
@@ -164,7 +165,7 @@ Si ya decidiste usar tu bicicleta para tus desplazamientos diarios, debes tomar 
                 , Bicicletas plegables
                 , Fixies y single speed
                 , Cruisers entre otras. </h2></div>
-                <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image17','','imagenes/negro.jpg',1)"><img src="imagenes/colores.jpg" width="640" height="480" id="Image17"></a> </div>
+                <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image17','','imagenes/negro.jpg',1)"><img src="imagenes/colores.jpg" width="401" height="244" id="Image17"></a> </div>
                  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
                  <div>
                    <img src="imagenes/bici.png" width="46" height="46">
